--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-gradio==4.36.1
 numpy==1.23.4
 face_alignment==1.3.5
 imageio==2.19.3
@@ -36,7 +35,7 @@ cn2an
 pypinyin
 pyopenjtalk
 g2p_en
-#modelscope==1.10.0
+modelscope==1.10.0
 chardet
 PyYAML
 psutil
